feat: add home and soft link it for user